chore: Some efficiencies in legend command